--- a/tryJesusApp/src/main/resources/application.properties
+++ b/tryJesusApp/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/tryjesusdb
 spring.datasource.username=postgres
 spring.datasource.password=P@ssword
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.port= 8085
