I have added the security part and secure some endpoints,I will design the front end now

--- a/tryJesusApp/src/main/resources/application.properties
+++ b/tryJesusApp/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/tryjesusdb
 spring.datasource.username=postgres
 spring.datasource.password=P@ssword
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+jwt.secretKey = dGhpcyBpcyBteSBzZWN1cmUga2V5IGFuZCB5b3UgY2Fubm90IGhhY2sgaXQ=
 server.port= 8085
